fix bug with horizontal scroll

--- a/src/less/layout.less
+++ b/src/less/layout.less
@@ -9,7 +9,7 @@
   margin: 0;
 
   display: grid;
-  grid-template-columns: auto;
+  grid-template-columns: 100%;
   grid-template-rows:
     min-content
     min-content
